# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
cars_api/: models.py  permissions.py  serializers.py  urls.py  views.py
cars_api/migrations/: 0001_initial.py
config/: settings.py  urls.py
